test/grammar/schema/type/type_fail_25/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:5:11
  |
5 |     name: ErrOther
  |           ^ name 'ErrOther' is not defined, did you mean '["Other"]'?
  |